# temporal-production-local

./: .dockerignore  .envrc  .gitignore  .mcp.json  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  OBSERVABILITY.md  README.md  build.gradle  docker-compose.yml  gradle.properties  justfile  pyproject.toml  settings.gradle
.githooks/: pre-commit  prepare-commit-msg
.github/: CODEOWNERS
.secrets/: README.md
ai_checkpoints/: 0001-polyglot-k8s-restructure.md  0002-apps-libs-restructure.md  0003-compose-build-working-demo.md  0004-temporal-cloud-base-layer-and-run-modes.md  0005-shared-namespace-spec-and-oss-provisioning.md  0006-kind-cluster-layer-and-local-oci-delivery.md  0007-local-visibility-plane.md  0008-public-release-prep.md  0009-ergonomic-renames.md  0010-worker-ksa-yaml-gate-compose-plane-split.md  0011-app-tier-onto-kind.md  0012-gitops-deadlock-resilience-and-app-split.md  0013-console-kube-status-and-visibility-guardrails.md  0014-console-cloud-status-and-compose-demotion.md  0015-retire-nonprod-prod-env-split.md  0016-polyglot-structured-logging.md  0017-clickstack-bakeoff-otel-native-logs.md  0018-clickhouse-log-store-hardening.md  0019-protobuf-idl-activity-versioning.md  0020-libs-apps-composition-boundary.md  0021-metrics-and-worker-autoscaling.md  0022-push-metrics-to-clickhouse-and-arch-page.md  0023-mcp-servers-for-agents.md  0024-centralized-dependency-versions.md  0025-keda-autoscaling-phase1.md  0026-grafana-dashboard-observability-fixes.md  0027-provisioned-capacity-and-durable-execution-value-dashboards.md  0028-custom-worker-autoscaler.md  0029-oss-temporal-server-on-kind.md  0030-polyglot-domain-scaffolding-python-foundation.md  0031-slot-utilization-second-scaling-signal.md  0032-descriptor-driven-polyglot-domain-adoption.md  0033-ruby-dotnet-polyglot-and-runtime-version-flexibility.md  README.md  slot-utilization-autoscaling-plan.md
apps/: README.md
compose/: clickstack.yml  host-apptier.yml  oss-server.yml  workers.yml
compose/scripts/: bootstrap-oss-domains.sh  bootstrap-search-attributes.sh  build_domain_images.py  fetch-grafana-plugins.py  fetch-headlamp-plugins.py  lint_domain_templates.py  new_domain.py  render-deps.py  render-oss-bootstrap.py  scaffold_domain.py  verify-domains.py  versions-audit.py  versions-upstream.py
config/: cloud.env.example  dependencies.yaml  local-k8s.env  local-oss-kind.env  local-oss.env
config/domains/: orders.yaml  ziggymart.yaml
config/temporal/: namespaces.yaml
deploy/: README.md  check-sync-waves.py  lint-manifests.sh
deploy/argocd/: root-app.yaml
deploy/kind/: cluster-down.sh  cluster-up.sh  console-reader-rbac.yaml  local-registry-hosting.yaml  mirror-deps.sh  zot-config.json
deploy/terraform/: cloud.tf  kind-config.yaml  main.tf  variables.tf  versions.tf
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  MCP.md  RUNMODES.md  SHIP_PLAN.md  adapting-a-demo.md
docs/adr/: 0001-polyglot-shared-kernel-layout.md  0002-infra-and-delivery.md  0003-temporal-server-backend.md  0004-worker-versioning.md  0005-connection-profiles.md  0006-codec-server.md  0007-oss-namespace-provisioning.md  0008-oss-authn-authz.md  0009-cluster-layer-seam.md  0010-just-orchestrator.md  0011-local-oci-delivery.md  0012-branch-and-image-versioning.md  0013-air-gap-boundary.md  0014-local-visibility-plane.md  0015-console-backend-substrate-aware.md  0016-gitops-boundary-and-deadlock-resilience.md  0017-retire-nonprod-prod-env-split.md  0018-structured-logging.md  0019-otel-native-log-convention-grafana-over-clickstack.md  0020-adopt-clickhouse-log-store-retire-loki.md  0021-protobuf-idl-and-activity-version-in-command.md  0022-domain-core-vs-application-composition-boundary.md  0023-worker-autoscaling-hpa-keda-hybrid.md  0024-push-metrics-to-clickhouse.md  0025-centralized-dependency-version-management.md  0026-domain-descriptors-scaffolding-data-converter.md  0027-openmetrics-sdk-metric-naming.md  0028-worker-pool-naming-and-identity-conventions.md
docs/runbooks/: argocd-stuck-sync.md  kind-restart-registry-recovery.md
images/: app.Dockerfile  dotnet.Dockerfile  go.Dockerfile  java.Dockerfile  python.Dockerfile  ruby.Dockerfile  typescript.Dockerfile
kernels/python/: pyproject.toml
libs/appkit/python/: pyproject.toml
libs/appkit/python/appkit/: __init__.py  db.py  domains.py  settings.py  telemetry.py  temporal.py  worker.py
libs/logging/python/: pyproject.toml
libs/logging/python/obslog/: __init__.py  schema.py  serialize.py
libs/logging/python/tests/: test_schema_conformance.py
libs/orders/python/: pyproject.toml
libs/orders/python/orders/: __init__.py  api.py  config.py  containers.py  resources.py  worker.py
libs/orders/python/orders/_pb/orders/activities/v1/: activities_pb2.py  activities_pb2.pyi
libs/orders/python/orders/_pb/orders/workflow/v1/: order_pb2.py  order_pb2.pyi
libs/orders/python/orders/activities/: __init__.py  contract_gate.py  customer_message.py  external.py  persistence.py
libs/orders/python/orders/clients/: orders_service.py
libs/orders/python/orders/services/: temporal.py
libs/orders/python/orders/shared/: activity_io.py  contract_version.py  contracts.py  errors.py  metrics.py  telemetry.py  temporal_ids.py  workflow_io.py
libs/orders/python/orders/workflows/: order_workflow.py
libs/orders/python/orders/workflows/order/: context.py  terminal.py
libs/orders/python/tests/: test_contract_version_gate.py  test_proto_contracts.py
mock-api/: main.py
orders-service/: config.py  containers.py  main.py  resources.py  worker.py
orders-service/activities/: __init__.py  customer_message.py  external.py  persistence.py
orders-service/clients/: mock_api.py  (+1 more)
templates/domain/python/libs/{{DOMAIN}}/python/: pyproject.toml
templates/domain/python/libs/{{DOMAIN}}/python/{{DOMAIN}}/: __init__.py
templates/domain/python/libs/{{DOMAIN}}/python/{{DOMAIN}}/activities/: hello.py
templates/domain/python/libs/{{DOMAIN}}/python/{{DOMAIN}}/shared/: temporal_ids.py  workflow_io.py
templates/domain/python/libs/{{DOMAIN}}/python/{{DOMAIN}}/workflows/: hello_workflow.py
(+351 files in other folders)
