[project]
name = "temporal-demo"
version = "0.0.0"
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
# Apps that build on the shared Python kernel just depend on it; the kernel's
# own pyproject (libs/orders/python) owns the concrete library versions — single
# source of truth. Worker and API apps are thin definitions on top.
workers = ["orders"]
orders-api = ["orders"]
codec-server = [
  "fastapi==0.111.0",
  "uvicorn==0.29.0",
  "pydantic==2.7.1",
  "temporalio>=1.28,<1.29",
]
retail-demo-console = [
  "asyncpg>=0.29.0",
  "docker>=7.1.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "pydantic-settings>=2.2.1",
  "uvicorn[standard]>=0.29.0",
]
mock-api = [
  "fastapi==0.111.0",
  "uvicorn==0.29.0",
  "pydantic==2.7.1",
]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pyright>=1.1.410",
    "pytest-timeout>=2.4.0",
    "poethepoet>=0.46.0",
]

[tool.uv]
default-groups = ["workers", "orders-api", "codec-server", "retail-demo-console", "mock-api", "dev"]

# The Python shared kernel is a workspace package; apps depend on it by name.
[tool.uv.workspace]
members = ["libs/orders/python"]

[tool.uv.sources]
orders = { workspace = true }

# Task runner. Invoke with `uv run poe <task>` (e.g. `uv run poe check`).
[tool.poe.tasks]
ruff-check = { cmd = "ruff check .", help = "Lint with ruff" }
fix = { cmd = "ruff check --fix .", help = "Lint and autofix with ruff" }
format = { cmd = "ruff format .", help = "Format code" }
format-check = { cmd = "ruff format --check .", help = "Check formatting only" }
typecheck = { cmd = "pyright", help = "Static type check" }
test = { cmd = "pytest", help = "Run tests" }
lint = { sequence = [
  "ruff-check",
  "format-check",
  "typecheck",
], help = "All static checks (no fixes)" }
check = { sequence = ["lint", "test"], help = "Full gate: lint + test" }

# =============================================================================
# Compose lifecycle — one app stack, swappable Temporal backend.
#
# Each task SOURCES its connection profile into the compose process so the
# backend is deterministic regardless of any TEMPORAL_* in the host shell
# (.envrc/direnv targets host-direct runs, not compose). `down` must use the
# same -f set as the matching `up`. Bring the stack down before switching modes.
#
#   Local OSS  : poe up         (base + compose/oss-server.yml)
#   Cloud nonprod: poe up-cloud
#   Cloud prod : poe up-cloud-prod
# =============================================================================

up = { shell = "set -a; . config/local-oss.env; set +a; docker compose -f docker-compose.yml -f compose/oss-server.yml up --build", help = "Local OSS server + apps" }
down = { shell = "docker compose -f docker-compose.yml -f compose/oss-server.yml down -v", help = "Stop the local-OSS stack and drop volumes" }
fresh = { sequence = ["down", "up"], help = "Recreate the local-OSS stack" }

up-cloud = { shell = "set -a; . .secrets/keys/cloud-nonprod.env; set +a; docker compose -f docker-compose.yml up --build", help = "Apps against Temporal Cloud (nonprod)" }
up-cloud-prod = { shell = "set -a; . .secrets/keys/cloud-prod.env; set +a; docker compose -f docker-compose.yml up --build", help = "Apps against Temporal Cloud (prod)" }
down-cloud = { shell = "docker compose -f docker-compose.yml down -v", help = "Stop the Cloud-backed app stack and drop volumes" }
fresh-cloud = { sequence = ["down-cloud", "up-cloud"], help = "Recreate the Cloud (nonprod) app stack" }

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
include = ["libs", "apps"]
exclude = ["**/.venv", "**/__pycache__", "archive"]
# The kernel is an installable package (import `orders`); thin apps run
# from their own directory and import the kernel. Console keeps its `from app...`
# layout, so its root is its own app dir.
executionEnvironments = [
  { root = "libs/orders/python" },
  { root = "apps/business/orders-api/python" },
  { root = "apps/temporal/workers/python/workflow" },
  { root = "apps/temporal/workers/python/activity" },
  { root = "apps/temporal/codec-server/python" },
  { root = "apps/demo/console/python" },
  { root = "apps/demo/mock-api/python" },
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Stuck workflows/activities hang forever; fail fast instead.
timeout = 60
filterwarnings = [
  # Workflow that completes with a still-running update or signal handler is a
  # correctness bug. Turn these Temporal warnings into test failures.
  "error::temporalio.workflow.UnfinishedUpdateHandlersWarning",
  "error::temporalio.workflow.UnfinishedSignalHandlersWarning",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# E/F = pyflakes + pycodestyle (defaults), I = import sorting,
# UP = pyupgrade (modern syntax), B = bugbear (likely-bug patterns)
select = ["E", "F", "I", "UP", "B"]
ignore = [
  # Line length is handled by the formatter; remaining hits are long
  # strings/comments/URLs we don't want to hand-wrap.
  "E501",
  # function-call-in-default-argument: FastAPI's Depends()/Query() idiom
  # is intentional, not a bug.
  "B008",
]
