[project]
name = "temporal-demo"
version = "0.0.0"
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
# Apps that build on the shared Python kernel just depend on it; the kernel's
# own pyproject (libs/orders/python) owns the concrete library versions — single
# source of truth. Worker and API apps are thin definitions on top.
workers = ["orders"]
orders-api = ["orders"]
codec-server = [
  "fastapi==0.111.0",
  "uvicorn==0.29.0",
  "pydantic==2.7.1",
  "temporalio>=1.28,<1.29",
]
platform-console = [
  "asyncpg>=0.29.0",
  "docker>=7.1.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "pydantic-settings>=2.2.1",
  "uvicorn[standard]>=0.29.0",
]
mock-api = [
  "fastapi==0.111.0",
  "uvicorn==0.29.0",
  "pydantic==2.7.1",
]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pyright>=1.1.410",
    "pytest-timeout>=2.4.0",
    "poethepoet>=0.46.0",
    "pyyaml>=6.0",  # render-oss-bootstrap.py reads the shared namespace spec
]

[tool.uv]
default-groups = ["workers", "orders-api", "codec-server", "platform-console", "mock-api", "dev"]

# The Python shared kernel is a workspace package; apps depend on it by name.
[tool.uv.workspace]
members = ["libs/orders/python"]

[tool.uv.sources]
orders = { workspace = true }

# Task runner. Invoke with `uv run poe <task>` (e.g. `uv run poe check`).
[tool.poe.tasks]
ruff-check = { cmd = "ruff check .", help = "Lint with ruff" }
fix = { cmd = "ruff check --fix .", help = "Lint and autofix with ruff" }
format = { cmd = "ruff format .", help = "Format code" }
format-check = { cmd = "ruff format --check .", help = "Check formatting only" }
typecheck = { cmd = "pyright", help = "Static type check" }
lint-manifests = { cmd = "bash deploy/lint-manifests.sh", help = "helm lint + kubeconform on the k8s manifests (soft-skips kubeconform if absent)" }
# Tolerate pytest's exit code 5 (no tests collected) so the gate stays green
# until the first tests land (e.g. the planned replay/NDE suite). Real failures
# (exit 1) still fail the task.
test = { shell = "pytest; code=$?; if [ $code -eq 5 ]; then echo 'pytest: no tests collected (ok for now)'; exit 0; fi; exit $code", help = "Run tests (tolerates no-tests-yet)" }
lint = { sequence = [
  "ruff-check",
  "format-check",
  "typecheck",
  "lint-manifests",
], help = "All static checks (no fixes)" }
check = { sequence = ["lint", "test"], help = "Full gate: lint + test" }

# =============================================================================
# Compose lifecycle — one app stack, swappable Temporal backend.
#
# Each task SOURCES its connection profile into the compose process so the
# backend is deterministic regardless of any TEMPORAL_* in the host shell
# (.envrc/direnv targets host-direct runs, not compose). `down` must use the
# same -f set as the matching `up`. Bring the stack down before switching modes.
#
#   Local OSS  : poe up         (base + compose/oss-server.yml)
#   Cloud nonprod: poe up-cloud
#   Cloud prod : poe up-cloud-prod
# =============================================================================

render-oss-bootstrap = { cmd = "python compose/scripts/render-oss-bootstrap.py", help = "Render the shared spec to the OSS bootstrap env file" }
render-deps = { cmd = "python compose/scripts/render-deps.py", help = "Render config/dependencies.yaml -> config/.generated/deps.env (for the kind delivery scripts)" }
# Compose stack = base (host platform/visibility plane) + opt-in layers. The
# worker tier (compose/workers.yml) is included on the pure-Compose paths and
# OMITTED on the kind path (kind runs the workers — see up-cloud-kind). When
# both are present, workers.yml must precede oss-server.yml (the OSS layer
# merges `depends_on: temporal` onto the worker services).
up = { shell = "python compose/scripts/render-oss-bootstrap.py; set -a; . config/local-oss.env; set +a; docker compose -f docker-compose.yml -f compose/workers.yml -f compose/oss-server.yml up --build", help = "Local OSS server + apps + workers" }
down = { shell = 'docker compose -f docker-compose.yml -f compose/workers.yml -f compose/oss-server.yml down -v --remove-orphans; docker compose -p "${PWD##*/}" -f docker-compose.yml -f compose/workers.yml -f compose/oss-server.yml down -v --remove-orphans || true; docker network rm temporal-network 2>/dev/null || true', help = "Stop the local-OSS stack and drop volumes (also sweeps a stray default-project and the shared temporal-network)" }
fresh = { sequence = ["down", "up"], help = "Recreate the local-OSS stack" }

up-cloud = { shell = "set -a; . .secrets/keys/cloud-nonprod.env; set +a; docker compose -f docker-compose.yml -f compose/workers.yml up --build", help = "Apps + workers against Temporal Cloud (nonprod), all on the host" }
up-cloud-prod = { shell = "set -a; . .secrets/keys/cloud-prod.env; set +a; docker compose -f docker-compose.yml -f compose/workers.yml up --build", help = "Apps + workers against Temporal Cloud (prod), all on the host" }
# Host companion for the kind+Cloud path: app tier + console + cluster observers,
# but NO worker tier — the kind cluster runs the workers (orders-workers chart).
# Avoids a second fleet polling the same Cloud task queues. Tear down with down-cloud.
up-cloud-kind = { shell = "set -a; . .secrets/keys/cloud-nonprod.env; set +a; docker compose -f docker-compose.yml up --build", help = "Host app tier + visibility for the kind+Cloud path (kind owns the workers)" }
down-cloud = { shell = 'docker compose -f docker-compose.yml -f compose/workers.yml down -v --remove-orphans; docker compose -p "${PWD##*/}" -f docker-compose.yml -f compose/workers.yml down -v --remove-orphans || true; docker network rm temporal-network 2>/dev/null || true', help = "Stop any Cloud-backed host stack (with or without workers) and drop volumes; also sweeps a stray default-project and the shared temporal-network" }
fresh-cloud = { sequence = ["down-cloud", "up-cloud"], help = "Recreate the Cloud (nonprod) app stack" }

# =============================================================================
# CI pipeline + worker image build/push (kind path).
#
# Worker images are tagged with the short git SHA so each build is an immutable,
# uniquely-addressable artifact. On kind the Temporal Worker Controller derives a
# fresh Build ID from the pod template, so a new image tag = a new worker version.
# REGISTRY defaults to the local registry wired to kind by `just cluster-up`.
# Prefer the `just` front door (`just ci`); these are the Python-layer internals.
# =============================================================================

# Tag = `git describe --always --dirty` so a dirty tree is never confused with a
# clean commit (the tag carries a `-dirty` suffix). The immutable identity is the
# digest (see image-digests) — deploys pin by digest, the tag is for humans.
build-images = { shell = """
set -e
REGISTRY="${REGISTRY:-localhost:5001}"
TAG="$(git describe --tags --always --dirty --abbrev=12)"
for profile in workflow activity; do
  docker build -f images/python.Dockerfile \
    --build-arg APP_GROUP=workers \
    --build-arg APP_PATH=apps/temporal/workers/python/$profile \
    --build-arg APP_MODULE=main \
    --build-arg APP_CMD=python \
    -t "$REGISTRY/orders-worker-$profile:$TAG" .
done
echo "Built $REGISTRY/orders-worker-{workflow,activity}:$TAG"
""", help = "Build both worker images, tagged <registry>/orders-worker-<profile>:<git-describe>" }

push-images = { shell = """
set -e
REGISTRY="${REGISTRY:-localhost:5001}"
TAG="$(git describe --tags --always --dirty --abbrev=12)"
for profile in workflow activity; do
  docker push "$REGISTRY/orders-worker-$profile:$TAG"
done
echo "Pushed $REGISTRY/orders-worker-{workflow,activity}:$TAG"
""", help = "Push both worker images to the local registry" }

image-tag = { shell = "git describe --tags --always --dirty --abbrev=12", help = "Print the image tag (git-describe) for the current tree" }

image-digests = { shell = """
set -e
REGISTRY="${REGISTRY:-localhost:5001}"
TAG="$(git describe --tags --always --dirty --abbrev=12)"
for profile in workflow activity; do
  echo "$profile=$(crane digest "$REGISTRY/orders-worker-$profile:$TAG" --insecure)"
done
""", help = "Print pushed image digests (profile=sha256:...) for deploy-by-digest" }

ci = { sequence = ["lint", "test", "build-images", "push-images"], help = "Local CI gate: lint + test + build + push worker images" }

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
include = ["libs", "apps"]
exclude = ["**/.venv", "**/__pycache__", "archive"]
# The kernel is an installable package (import `orders`); thin apps run
# from their own directory and import the kernel. Console keeps its `from app...`
# layout, so its root is its own app dir.
executionEnvironments = [
  { root = "libs/orders/python" },
  { root = "apps/business/orders-api/python" },
  { root = "apps/temporal/workers/python/workflow" },
  { root = "apps/temporal/workers/python/activity" },
  { root = "apps/temporal/codec-server/python" },
  { root = "apps/platform/console/python" },
  { root = "apps/business/mock-api/python" },
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Stuck workflows/activities hang forever; fail fast instead.
timeout = 60
filterwarnings = [
  # Workflow that completes with a still-running update or signal handler is a
  # correctness bug. Turn these Temporal warnings into test failures.
  "error::temporalio.workflow.UnfinishedUpdateHandlersWarning",
  "error::temporalio.workflow.UnfinishedSignalHandlersWarning",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# E/F = pyflakes + pycodestyle (defaults), I = import sorting,
# UP = pyupgrade (modern syntax), B = bugbear (likely-bug patterns)
select = ["E", "F", "I", "UP", "B"]
ignore = [
  # Line length is handled by the formatter; remaining hits are long
  # strings/comments/URLs we don't want to hand-wrap.
  "E501",
  # function-call-in-default-argument: FastAPI's Depends()/Query() idiom
  # is intentional, not a bug.
  "B008",
]
