[project]
name = "temporal-demo"
version = "0.0.0"
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
# Apps that build on the shared Python kernel just depend on it; the kernel's
# own pyproject (libs/orders/python) owns the concrete library versions — single
# source of truth. Worker and API apps are thin definitions on top.
# `obslog` is the shared structured-logging kernel — apps that don't import the
# orders kernel (console, mock-api) still share one logging facade via it.
workers = ["orders", "appkit"]
orders-api = ["orders", "appkit"]
codec-server = [
  "fastapi==0.111.0",
  "uvicorn==0.29.0",
  "pydantic==2.7.1",
  "temporalio>=1.28,<1.29",
  "obslog",
]
platform-console = [
  "asyncpg>=0.29.0",
  "docker>=7.1.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "kubernetes>=30.1.0",
  "pydantic-settings>=2.2.1",
  "uvicorn[standard]>=0.29.0",
  # Console-owned Temporal Cloud liveness probe builds its own read-only client.
  "temporalio>=1.28,<1.29",
  "obslog",
]
mock-api = [
  "fastapi==0.111.0",
  "uvicorn==0.29.0",
  "pydantic==2.7.1",
  "obslog",
  # Host-plane mock pushes logs straight to the observability backend (no node
  # agent on the host) — needs the OTLP log exporter obslog imports lazily.
  "opentelemetry-sdk>=1.25",
  "opentelemetry-exporter-otlp-proto-grpc>=1.25",
]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pyright>=1.1.410",
    "pytest-timeout>=2.4.0",
    "poethepoet>=0.46.0",
    "pyyaml>=6.0",  # render-oss-bootstrap.py reads the shared namespace spec
]

[tool.uv]
default-groups = ["workers", "orders-api", "codec-server", "platform-console", "mock-api", "dev"]

# The Python shared kernels are workspace packages; apps depend on them by name.
[tool.uv.workspace]
members = ["libs/orders/python", "libs/logging/python", "libs/appkit/python"]

[tool.uv.sources]
orders = { workspace = true }
obslog = { workspace = true }
appkit = { workspace = true }

# Task runner — Python toolchain ONLY (ruff / pyright / pytest).
# Boundary rule: if a task shells docker/compose/terraform/kubectl/helm or
# touches >1 language's artifacts, it lives in the justfile, NOT here. This
# layer is the Python *leaf* runner; `just` is the cross-language front door
# that fans it (and future go/ts/java leaves) in. Invoke via `uv run poe <task>`.
[tool.poe.tasks]
ruff-check = { cmd = "ruff check .", help = "Lint with ruff" }
fix = { cmd = "ruff check --fix .", help = "Lint and autofix with ruff" }
format = { cmd = "ruff format .", help = "Format code" }
format-check = { cmd = "ruff format --check .", help = "Check formatting only" }
typecheck = { cmd = "pyright", help = "Static type check" }
# Tolerate pytest's exit code 5 (no tests collected) so the gate stays green
# until the first tests land (e.g. the planned replay/NDE suite). Real failures
# (exit 1) still fail the task.
test = { shell = "pytest; code=$?; if [ $code -eq 5 ]; then echo 'pytest: no tests collected (ok for now)'; exit 0; fi; exit $code", help = "Run tests (tolerates no-tests-yet)" }
# Python static checks ONLY. Manifest lint (helm/kubeconform) is infra → it
# moved to `just lint-manifests`, and `just lint` fans both in.
lint = { sequence = ["ruff-check", "format-check", "typecheck"], help = "Python static checks (no fixes)" }
check = { sequence = ["lint", "test"], help = "Python gate: lint + test" }

# Infra exception (kept here pragmatically): a dependency-free python probe that
# the live-test gate needs. No docker/helm, so leaving it avoids a bash heredoc
# in the justfile. `just preflight` wraps it. See AGENTS.md / docs/RUNMODES.md.
# The console is boot-resilient (it can run before kind exists — see ADR-0015 /
# db.py), so bringing it up first is always safe.
preflight-console = { shell = """
python - <<'PY'
import sys, urllib.request

URL = "http://localhost:8086/healthz"
try:
    with urllib.request.urlopen(URL, timeout=3) as resp:
        if resp.status == 200:
            print(f"platform-console is up ({URL} -> 200).")
            sys.exit(0)
except Exception:
    pass

sys.stderr.write(
    "platform-console is NOT up. Live kind testing requires it so the operator "
    "can follow along in real time.\\n"
    "Start it with 'just up-cloud-kind' (then 'just headlamp-reload'), then retry.\\n"
)
sys.exit(1)
PY
""", help = "Fail unless the platform-console is up (required before live kind testing)" }

# Image build/push + the CI gate moved to the justfile (docker = cross-language
# infra, not the Python toolchain). See `just build-images` / `just ci`.

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
include = ["libs", "apps"]
exclude = ["**/.venv", "**/__pycache__", "archive", "**/orders/_pb"]
# The kernel is an installable package (import `orders`); thin apps run
# from their own directory and import the kernel. Console keeps its `from app...`
# layout, so its root is its own app dir.
executionEnvironments = [
  { root = "libs/orders/python" },
  { root = "libs/logging/python" },
  { root = "libs/appkit/python" },
  { root = "apps/business/orders-api/python" },
  { root = "apps/temporal/workers/python/workflow" },
  { root = "apps/temporal/workers/python/activity" },
  { root = "apps/temporal/codec-server/python" },
  { root = "apps/platform/console/python" },
  { root = "apps/business/mock-api/python" },
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Stuck workflows/activities hang forever; fail fast instead.
timeout = 60
filterwarnings = [
  # Workflow that completes with a still-running update or signal handler is a
  # correctness bug. Turn these Temporal warnings into test failures.
  "error::temporalio.workflow.UnfinishedUpdateHandlersWarning",
  "error::temporalio.workflow.UnfinishedSignalHandlersWarning",
]

[tool.ruff]
target-version = "py312"
# Generated protobuf code is committed but never hand-edited or linted.
extend-exclude = ["libs/orders/python/orders/_pb"]

[tool.ruff.lint]
# E/F = pyflakes + pycodestyle (defaults), I = import sorting,
# UP = pyupgrade (modern syntax), B = bugbear (likely-bug patterns)
select = ["E", "F", "I", "UP", "B"]
ignore = [
  # Line length is handled by the formatter; remaining hits are long
  # strings/comments/URLs we don't want to hand-wrap.
  "E501",
  # function-call-in-default-argument: FastAPI's Depends()/Query() idiom
  # is intentional, not a bug.
  "B008",
]
