[project]
name = "appkit"
version = "0.0.0"
description = "Generic application-composition kit (ADR-0022, class 3a): domain- and app-agnostic building blocks — Temporal client builder (bakes in the data-converter contract), SQL engine factory, telemetry bootstrap, run-a-worker-from-profile loop, and settings field-groups. Names no workflow, activity, or external service of any domain."
requires-python = ">=3.12,<3.13"
dependencies = [
    "obslog",
    "opentelemetry-api>=1.25",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
    "opentelemetry-sdk>=1.25",
    "pydantic-settings>=2.14.0",
    "sqlalchemy[asyncio]>=2.0.30,<3",
    "temporalio>=1.30,<1.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["appkit"]
