[project]
name = "obslog"
version = "0.0.0"
description = "Polyglot structured-logging kernel: one schema + codec, replay-safe, two sinks (stdout JSON + optional OTLP). Python reference impl; libs/logging/<lang>/ mirrors the schema."
requires-python = ">=3.12,<3.13"
# Deliberately minimal: structlog only. OpenTelemetry is imported lazily inside
# init_logging (build_otlp_provider) so a stdout-only consumer needs no OTel.
dependencies = [
    "structlog>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["obslog"]
