[project]
name = "orders"
version = "0.0.0"
description = "Orders domain shared kernel: workflows, activities, clients, db, telemetry, and the API/worker entrypoints apps build on."
requires-python = ">=3.12,<3.13"
dependencies = [
    "asyncpg>=0.29.0",
    "dependency-injector>=4.49",
    "obslog",
    "fastapi==0.111.0",
    "httpx>=0.27.0",
    "opentelemetry-api>=1.25",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
    "opentelemetry-sdk>=1.25",
    # Runtime for the generated activity/workflow proto contracts (orders/_pb).
    # Major must match the buf gencode plugin pin in libs/orders/proto/buf.gen.yaml.
    "protobuf>=6.30,<7",
    "pydantic-settings>=2.14.0",
    "pydantic==2.7.1",
    "sqlalchemy[asyncio]>=2.0.30,<3",
    "temporalio>=1.28,<1.29",
    "uvicorn==0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orders"]
