[project]
name = "orders"
version = "0.0.0"
description = "Orders domain core (ADR-0022): workflows, activities, client ports, proto contracts, db models, and shared ids/errors. Reusable, not deployable — composition lives in the apps; generic kit in libs/appkit."
requires-python = ">=3.12,<3.13"
# Domain-core deps only. Composition deps (dependency-injector, fastapi, uvicorn,
# pydantic-settings, asyncpg, the OTel SDK/exporter) moved to the apps that compose
# this kernel (the workers / orders-api dependency groups) or to libs/appkit — see
# ADR-0022.
dependencies = [
    "appkit",
    "httpx>=0.27.0",
    "obslog",
    "opentelemetry-api>=1.25",
    # Runtime for the generated activity/workflow proto contracts (orders/_pb).
    # Major must match the buf gencode plugin pin in libs/orders/proto/buf.gen.yaml.
    "protobuf>=6.30,<7",
    "pydantic==2.7.1",
    "sqlalchemy[asyncio]>=2.0.30,<3",
    "temporalio>=1.28,<1.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orders"]
