[project]
name = "{{DOMAIN}}"
version = "0.0.0"
description = "{{Domain}} domain core (ADR-0022): scaffolded demo workflow + activity."
requires-python = ">=3.12,<3.13"
dependencies = [
    "appkit",
    "obslog",
    "opentelemetry-api>=1.25",
    "pydantic==2.7.1",
    "temporalio>=1.30,<1.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["{{DOMAIN}}"]
